# fedotmas-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  ROADMAP.md  justfile  mkdocs.yml  pyproject.toml
benchmarks/: README.md  RESULTS.md  fills.py  model.py  plots.py  presets.py  report.py  run_matrix.py
benchmarks/gsm8k/: __init__.py
benchmarks/logiqa/: __init__.py
benchmarks/mathqa/: __init__.py
benchmarks/mmlu/: __init__.py
docs/: blackboard.md  concepts.md  dsl.md  engine.md  flow.md  index.md  sdk.md
docs/api/: fedotmas.md  fedotmas_llm.md
docs/core/: blackboard.md  concepts.md  dsl.md  engine.md  flow.md
docs/llm/: agents.md  index.md
examples/: README.md  dag.py  eval_optimizer.py  eval_optimizer_event.py  group_chat.py  hierarchical.py  mixture_of_agents.py  orchestrator_workers.py  sectioning.py  swarm.py  two_agents.py
examples/combinators/: branch.py  loop.py  parallel.py  seq.py
examples/core-sdk/: conditions.py  running.py
examples/dsl/: dag.py  orchestrator.py  staged.py  swarm.py
examples/engine/: blackboard.py  contract_net.py  dag.py  debate.py  eval_optimizer.py  group_chat.py  hierarchical.py  mixture_of_agents.py  orchestrator_workers.py  prompt_chaining.py  reflection.py  router.py  sectioning.py  swarm.py  voting.py
examples/flow/: branch.py  composition.py  embed.py  gather.py  loop.py
examples/llm/: backends.py  dag.py  factories.py  orchestrator.py  swarm.py
examples/meta/: _presets.py  classify.py  (+3 more)
tests/: test_blackboard.py  test_dsl.py  test_flow.py  test_terminate.py
(+99 files in other folders)
