[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.21,<0.10" ]

[project]
name = "fedotmas"
version = "0.1.0"
description = "Agent Systems Generation and Harness"
readme = "README.md"
authors = [ { name = "Dmitry Gilemkhanov", email = "me@dmitryglhf.ru" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
  "prek>=0.4.4",
  "ruff>=0.15.16",
  "ty>=0.0.44",
]
